--- a/src/main/java/com/mycompany/assignment_project_2/Menu_Customer.form
+++ b/src/main/java/com/mycompany/assignment_project_2/Menu_Customer.form
@@ -201,6 +201,14 @@
           </Properties>
         </Component>
         <Component class="javax.swing.JLabel" name="Customer_Display_Name">
+          <Properties>
+            <Property name="background" type="java.awt.Color" editor="org.netbeans.beaninfo.editors.ColorEditor">
+              <Color blue="0" green="0" red="0" type="rgb"/>
+            </Property>
+            <Property name="foreground" type="java.awt.Color" editor="org.netbeans.beaninfo.editors.ColorEditor">
+              <Color blue="ff" green="ff" red="ff" type="rgb"/>
+            </Property>
+          </Properties>
         </Component>
       </SubComponents>
     </Container>
