--- a/src/main/java/com/mycompany/assignment_project_2/Menu_Admin.form
+++ b/src/main/java/com/mycompany/assignment_project_2/Menu_Admin.form
@@ -7,6 +7,9 @@
         <Property name="location" type="java.awt.Point" editor="org.netbeans.beaninfo.editors.PointEditor">
           <Point value="[0, 0]"/>
         </Property>
+        <Property name="maximumSize" type="java.awt.Dimension" editor="org.netbeans.beaninfo.editors.DimensionEditor">
+          <Dimension value="[1376, 697]"/>
+        </Property>
         <Property name="minimumSize" type="java.awt.Dimension" editor="org.netbeans.beaninfo.editors.DimensionEditor">
           <Dimension value="[1376, 697]"/>
         </Property>
@@ -729,6 +732,9 @@
     </Container>
     <Container class="javax.swing.JDialog" name="User_Appointments_View">
       <Properties>
+        <Property name="maximumSize" type="java.awt.Dimension" editor="org.netbeans.beaninfo.editors.DimensionEditor">
+          <Dimension value="[994, 588]"/>
+        </Property>
         <Property name="minimumSize" type="java.awt.Dimension" editor="org.netbeans.beaninfo.editors.DimensionEditor">
           <Dimension value="[994, 588]"/>
         </Property>
@@ -1747,7 +1753,7 @@
     </Component>
     <Component class="javax.swing.JButton" name="Admin_Option_8">
       <Properties>
-        <Property name="text" type="java.lang.String" value="Delete/cancel an appointment"/>
+        <Property name="text" type="java.lang.String" value="Delete an appointment"/>
         <Property name="actionCommand" type="java.lang.String" value="Admin_Option_8"/>
       </Properties>
       <Events>
